--- a/src/components/related-products-list/related-products-list.css
+++ b/src/components/related-products-list/related-products-list.css
@@ -54,12 +54,26 @@
   width: 100%;
 }
 
+@media (--small-only) {
+  .related-title {
+    margin-top: 69px;
+    width: 100%;
+    height: 54px;
+    font-family: PlayfairDisplay;
+    font-size: 31px;
+    letter-spacing: 0.7px;
+    text-align: center;
+    color: var(--line);
+  }
+}
+
 @media (--small-only), (--medium-only) {
+
   .list {
     margin-top: 20px;
   }
 
   .related-title {
-    margin-top: 76px;
+    margin-top: 69px;
   }
 }
